--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         <div class="imgBx">
             <img src="negroni.jpg" alt="">
         </div>
+        <div class="content">
+            <div class="details">
+                <h2>Negroni <br> <span> texto</span></h2>
+            </div>
+        </div>
     </div>
 </body>
 </html>
