--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
         </div>
         <div class="content">
             <div class="details">
-                <h2>Negroni <br> <span> texto</span></h2>
+                <h1>Negroni </h1><br> 
+                <ul>
+                    <li>  30 ml de gim </li>
+                    <li> 30 ml de Campari </li>
+                    <li>  30 ml de vermute tinto</li>
+                    <li>  Twist de laranja-baía </li>
+                </ul>
+                    <h2> <span>Coloque todos os ingredientes em um mixing-glass com bastante gelo. <br>
+                    Mexa com uma bailarina até o copo ficar gelado. <br>
+                    Encha um copo baixo de gelo. <br>
+                    Coe a mistura no copo. <br>
+                    Finalize com um twist ou uma fatia de laranja. </span></h2>
             </div>
         </div>
     </div>
