--- a/index.html
+++ b/index.html
@@ -13,21 +13,24 @@
             <img src="negroni.jpg" alt="">
         </div>
         <div class="content">
-            <div class="details">
+            <div class="details"> 
                 <h1>Negroni </h1><br> 
                 <ul>
                     <li>  30 ml de gim </li>
                     <li> 30 ml de Campari </li>
                     <li>  30 ml de vermute tinto</li>
                     <li>  Twist de laranja-baía </li>
-                </ul>
-                    <h2> <span>Coloque todos os ingredientes em um mixing-glass com bastante gelo. <br>
-                    Mexa com uma bailarina até o copo ficar gelado. <br>
-                    Encha um copo baixo de gelo. <br>
-                    Coe a mistura no copo. <br>
-                    Finalize com um twist ou uma fatia de laranja. </span></h2>
+                </ul> <br>
+                    <p>Coloque todos os ingredientes em um mixing-glass com bastante gelo. 
+                    Mexa com uma colher bailarina até o copo ficar gelado. 
+                    Encha um copo baixo de gelo. </p>
+                   <p> Coe a mistura no copo. 
+                    Finalize com um twist ou uma fatia de laranja. </p> <br>
+
+                <button>Imprimir</button>
             </div>
         </div>
+        
     </div>
 </body>
 </html>
